--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -44,6 +44,14 @@
             {{ product?.quantity }} {{ product?.product?.unit?.code }}
           </td>
         </ng-container>
+        <ng-container matColumnDef="conditioning">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+            Conditionnement
+          </th>
+          <td (click)="show($event,product)" mat-cell *matCellDef="let product" class="f-s-14">
+            {{ product?.quantity }} {{ product?.product?.conditioning?.name }}
+          </td>
+        </ng-container>
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Action
