--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -13,7 +13,7 @@
           <div class="field col-2">
             <label htmlFor="datePurchase">Date</label>
             <input type="text" class="d-none">
-            <p-calendar [(ngModel)]="datePurchase" name="datePurchase" id="datePurchase"></p-calendar>
+            <p-calendar [(ngModel)]="datePurchase" dateFormat="dd-mm-yy" name="datePurchase" id="datePurchase"></p-calendar>
           </div>
 
           <div class="field col-5">
