--- a/src/app/pages/create-course/create-course.component.html
+++ b/src/app/pages/create-course/create-course.component.html
@@ -212,7 +212,9 @@
                     <td>{{ detail?.product?.name }}</td>
                     <td>{{ detail?.product?.category?.name }}</td>
                     <td>{{ detail?.product?.conditioning?.name }}</td>
-                    <td>{{detail.quantity}} ({{detail?.realUnit}})</td>
+                    <!--<td>{{detail.quantity}} ({{detail?.realUnit}})</td>-->
+                    <td>{{detail?.realQ || detail?.quantity}} ({{detail?.realUnit || detail?.unit?.code}})</td>
+
                     <!-- <td>{{ detail?.value | number:'1.2-2' }}
                       /{{ detail?.unit?.code }}</td> -->
                     <td>{{detail?.totalPrice}} ({{curenn}})</td>
