recipe chargement okay

--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -70,7 +70,7 @@
                   </td>
 
                   <td style="width: 15%;">
-                    <button pButton pRipple type="button" icon="pi pi-some-icon" (click)="showPrepa()"
+                    <button pButton pRipple type="button" icon="pi pi-some-icon" (click)="showPrepa(dishes)"
                       class="p-button p-component p-button-text p-button-icon-only">
                       <!-- Vous pouvez insérer votre SVG ici -->
                       <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
