--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -97,7 +97,7 @@
         <div class="col-lg-4 d-flex align-items-center">
           <mat-checkbox id="is_active" color="primary" [(ngModel)]="shopData.is_active"
             (change)="shopData.is_active = $event.checked">
-            Is Active
+            Activé
           </mat-checkbox>
         </div>
       </div>
@@ -202,7 +202,7 @@
         <div class="col-lg-4 d-flex align-items-center">
           <mat-checkbox id="is_active" color="primary" [(ngModel)]="shopData.is_active"
             (change)="shopData.is_active = $event.checked">
-            Is Active
+            Activé
           </mat-checkbox>
         </div>
       </div>
