--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -35,6 +35,7 @@
                   <!--<th pSortableColumn="categorie" pColumnFilter="categorie">Categorie<p-sortIcon field="categorie"></p-sortIcon></th>-->
 
                   <th pSortableColumn="stock" pColumnFilter="stock">Stock<p-sortIcon field="stock"></p-sortIcon></th>
+                  <th pSortableColumn="stock" pColumnFilter="stock">Recette Secondaire<p-sortIcon field="stock"></p-sortIcon></th>
 
                   <!--<th pSortableColumn="cout" pColumnFilter="cout">Cout<p-sortIcon field="cout"></p-sortIcon></th>-->
 
@@ -56,6 +57,8 @@
 
                   <td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.stock}} <span
                       *ngIf="dishes.stock"> Kg</span></td>
+
+                      <td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;"> </td>
                   <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.cout }}</td>-->
 
                   <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes.entryDate | date:'yyyy-MM-dd HH:mm'}}</td> -->
