--- a/src/app/pages/fournisseur/fournisseur.component.html
+++ b/src/app/pages/fournisseur/fournisseur.component.html
@@ -51,6 +51,24 @@
         </ng-container>
 
 
+        <ng-container matColumnDef="isActive">
+          <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
+            Statut
+          </th>
+          <td mat-cell *matCellDef="let shop" class="f-s-14">
+
+            <span *ngIf="shop.isActive" class="text-success rounded f-w-600 p-6 p-y-4 f-s-12">
+              Actif
+            </span>
+
+            <span *ngIf="!shop.isActive" class="text-error rounded f-w-600 p-6 p-y-4 f-s-12">
+              Desactif
+            </span>
+
+          </td>
+        </ng-container>
+
+
         <ng-container matColumnDef="action">
           <th mat-header-cell *matHeaderCellDef class="f-s-16 f-w-600">
             Action
@@ -95,13 +113,13 @@
           </mat-form-field>
         </div>
         <div class="col-lg-4 d-flex align-items-center">
-          <mat-checkbox id="is_active" color="primary" [(ngModel)]="shopData.is_active"
-            (change)="shopData.is_active = $event.checked">
+          <mat-checkbox id="is_active" color="primary" [(ngModel)]="shopData.isActive"
+            (change)="shopData.isActive = $event.checked" [checked]="true">
             Activé
           </mat-checkbox>
         </div>
       </div>
-      
+
       <!-- <div class="row">
         
       </div> -->
@@ -200,8 +218,7 @@
           </mat-form-field>
         </div>
         <div class="col-lg-4 d-flex align-items-center">
-          <mat-checkbox id="is_active" color="primary" [(ngModel)]="shopData.is_active"
-            (change)="shopData.is_active = $event.checked">
+          <mat-checkbox id="isActive" color="primary" [(ngModel)]="shopData.isActive" [checked]="shopData.isActive">
             Activé
           </mat-checkbox>
         </div>
