--- a/src/app/pages/recipe/recipe.component.html
+++ b/src/app/pages/recipe/recipe.component.html
@@ -39,26 +39,30 @@
 
                   <!--<th pSortableColumn="cout" pColumnFilter="cout">Cout<p-sortIcon field="cout"></p-sortIcon></th>-->
 
-                  <th></th>
-                  <th></th>
+                  <th style="justify-content: center; text-align: center;">Actions</th>
+                  <!-- <th></th> -->
 
                   <!--<th></th>-->
                 </tr>
               </ng-template>
               <ng-template pTemplate="body" let-dishes>
                 <tr class="cursor-pointer">
-                  <td (click)="showDishesDetail($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.code}}
+                  <td (click)="showDishesDetail($event,dishes)" style="width: 20%; min-width: 8rem;">{{dishes?.code}}
                   </td>
-                  <td (click)="showDishesDetail($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.name}}
+                  <td (click)="showDishesDetail($event,dishes)" style="width: 20%; min-width: 8rem;">{{dishes?.name}}
                   </td>
                   <!--<td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.address?.address?.label}}</td>
           
                               <td (click)="showDishesDetail($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.categoryRecipe?.name }}</td>-->
 
-                  <td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;">{{dishes?.stock}} <span
+                  <td (click)="show($event,dishes)" style="width: 20%; min-width: 8rem;">{{dishes?.stock}} <span
                       *ngIf="dishes.stock"> Kg</span></td>
 
-                      <td (click)="show($event,dishes)" style="width: 35%; min-width: 8rem;"> </td>
+                      <td (click)="show($event,dishes)" style="width: 5%; min-width: 8rem;"> 
+                        <span [class]="dishes.baseRecipe ? 'text-green-500' : 'text-red-500'">
+                          {{ dishes.baseRecipe ? 'OUI' : 'NON' }}
+                      </span>
+                      </td>
                   <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes?.cout }}</td>-->
 
                   <!-- <td (click)="show($event,dishes)"  style="width: 35%; min-width: 8rem;">{{dishes.entryDate | date:'yyyy-MM-dd HH:mm'}}</td> -->
@@ -67,12 +71,10 @@
                                 <button pButton pRipple type="button"  icon="pi pi-eye" class="p-button p-component p-button-text p-button-icon-only"></button>
                               </td>-->
 
-                  <td style="width: 15%;">
+                  <td style="width: 45%; text-align: center;">
                     <button pButton pRipple type="button" (click)="show('top-right',dishes)" icon="pi pi-pencil"
                       class="p-button p-component p-button-text p-button-icon-only"></button>
-                  </td>
-
-                  <td style="width: 15%;">
+                 
                     <button pButton pRipple type="button" icon="pi pi-some-icon" (click)="showPrepa(dishes)"
                       class="p-button p-component p-button-text p-button-icon-only">
                       <!-- Vous pouvez insérer votre SVG ici -->
@@ -95,10 +97,7 @@
                         </g>
                       </svg>
                     </button>
-                  </td>
-
-
-                  <td style="width: 15%;">
+                
                     <button pButton pRipple type="button" (click)="delete('top-right',dishes)" icon="pi pi-trash"
                       class="p-button p-component p-button-text p-button-icon-only"></button>
                   </td>
@@ -144,9 +143,9 @@
                     [(ngModel)]="ratio" [showButtons]="true" [min]="0"></p-inputNumber>
                 </div>
                 <div class="field col-4">
-                  <label for="baserecipe">Recette Secondaire</label>
-                  <p-dropdown [(ngModel)]="baserecipe" name="baserecipe"
-                      [options]="reciss" optionLabel="name"
+                  <label for="baseRecipe">Recette Secondaire</label>
+                  <p-dropdown [disabled]="name==null" [(ngModel)]="base" name="baseRecipe"
+                      [options]="reciss" optionLabel="name" (onChange)="openDialogProduct($event)"
                       placeholder="OUI ou NON">
                   </p-dropdown>
                 </div>
@@ -482,3 +481,60 @@
     <!---->
   </mat-card-content>
 </mat-card>
+<p-dialog [(visible)]="productDialog" appendTo="body" [style]="{width: '850px'}" header="Enregistrement du recette de base" [modal]="true"
+            class="p-fluid">
+            <div class="grid">
+              <form class=" newform col-12" #f="ngForm" (ngSubmit)="addProduct()">
+                <div class="card p-fluid">
+                  <div class="grid">
+                    <div class="col-6">
+                      <div class="field">
+                        <label htmlFor="name">Nom</label>
+                        <input pInputText id="name" [(ngModel)]="productData.name" name="name" type="text" placeholder="Nom produit" required />
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="field ">
+                        <label htmlFor="unit">Unité</label>
+                        <p-dropdown [options]="units" optionLabel="name" name="unit" [(ngModel)]="productData.unit"></p-dropdown>
+                      </div>
+                    </div>
+                    <div class="col-6">
+                      <div class="field ">
+                        <label htmlFor="category">Categorie</label>
+                        <p-dropdown [options]="categorys" optionLabel="name" name="category" [(ngModel)]="productData.category"></p-dropdown>
+                      </div>
+                    </div>
+                    <!-- <div class="col-6">
+                      <div class="field ">
+                        <label htmlFor="conditioning">Condition</label>
+                        <p-dropdown [options]="conditionings" optionLabel="name" name="conditioning"
+                          [(ngModel)]="productData.conditioning"></p-dropdown>
+                      </div>
+                    </div> -->
+                    <div class="col-6">
+                      <div class="field">
+                        <label htmlFor="lostpercentage">Pourcentage de perte</label>
+                        <p-inputNumber mode="decimal" [minFractionDigits]="2" name="lostpercentage" id="lostpercentage"
+                          [(ngModel)]="productData.lostpercentage" [showButtons]="true" [min]="0" [suffix]="'%'">
+                        </p-inputNumber>
+                      </div>
+            
+                    </div>
+                  </div>
+            
+                  <!-- <p>Description</p>
+                  <textarea rows="5" cols="10" [(ngModel)]="productData.description" name="description" placeholder="Description"
+                    pInputTextarea></textarea> -->
+            
+                  <label id="erreur" *ngIf="isError">{{erreur}}</label>
+                  <label id="success" *ngIf="isSuccess">{{sucess}}</label>
+            
+            
+                  <button pButton label="Enregistrer" type="submit" [loading]="loading" class="p-button-orange mt-4"
+                    [disabled]="!f.valid"></button>
+            
+                </div>
+              </form>
+            </div>
+</p-dialog>
